--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -1362,11 +1362,8 @@ spec:
                 oidcProviderConfiguration:
                   description: OIDCProviderConfiguration allows to configure OIDC provider at the Seed level.
                   properties:
-                    cookieHashKey:
-                      description: 'Optional: CookieHashKey is required, used to authenticate the cookie value using HMAC. It is recommended to use a key with 32 or 64 bytes. If not set, configuration is inherited from the default OIDC provider.'
-                      type: string
                     cookieSecureMode:
-                      description: 'Optional: CookieSecureMode if true then cookie received only with HTTPS otherwise with HTTP. If not set, configuration is inherited from the default OIDC provider.'
+                      description: 'Optional: CookieSecureMode guarantees that when the client sends the cookie, it does so through an encrypted request, using the HTTPS protocol. If not set, its value is inherited from the global OIDC provider configuration.'
                       type: boolean
                     issuerClientID:
                       description: IssuerClientID is the application's ID.
@@ -1378,10 +1375,13 @@ spec:
                       description: URL of the provider which allows the API server to discover public signing keys.
                       type: string
                     offlineAccessAsScope:
-                      description: 'Optional:  OfflineAccessAsScope if true then "offline_access" scope will be used otherwise ''access_type=offline" query param will be passed. If not set, configuration is inherited from the default OIDC provider.'
+                      description: 'Optional:  OfflineAccessAsScope if true then "offline_access" scope will be used otherwise ''access_type=offline" query param will be passed. If not set, its value is inherited from the global OIDC provider configuration.'
                       type: boolean
+                    secureCookie:
+                      description: SecureCookie encodes and decodes authenticated and optionally encrypted cookie values. It is recommended to use a key with 32 or 64 bytes. If not set, its value is inherited from the global OIDC provider configuration.
+                      type: string
                     skipTLSVerify:
-                      description: 'Optional: SkipTLSVerify skip TLS verification for the token issuer. If not set, configuration is inherited from the default OIDC provider.'
+                      description: 'Optional: SkipTLSVerify skip TLS verification for the token issuer. If not set, its value is inherited from the global OIDC provider configuration.'
                       type: boolean
                   required:
                     - issuerClientID
