KubeVirt swtich StorageClass config to DC
Signed-off-by: Helene Durand <helene@kubermatic.com>

--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -158,6 +158,9 @@ spec:
                 podSelector: {}
                 policyTypes:
                 - Ingress
+          infraStorageClasses:
+            - isDefaultClass: true
+              name: px-csi-db
     syseleven-dbl1:
       country: DE
       location: Syseleven - dbl1
