--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -557,7 +557,7 @@ spec:
                           description: ImageCloningEnabled flag enable/disable cloning for a cluster.
                           type: boolean
                         infraStorageClasses:
-                          description: InfraStorageClasses is a list of storage classes from KubeVirt infra cluster that are used for initialization of user cluster storage classes by the CSI driver kubevirt (hot pluggable disks)
+                          description: 'Deprecated: in favor of InfraStorageClasses. InfraStorageClasses is a list of storage classes from KubeVirt infra cluster that are used for initialization of user cluster storage classes by the CSI driver kubevirt (hot pluggable disks)'
                           items:
                             type: string
                           type: array
@@ -591,13 +591,12 @@ spec:
                           description: StorageClasses is a list of storage classes from KubeVirt infra cluster that are used for initialization of user cluster storage classes by the CSI driver kubevirt (hot pluggable disks. It contains also some flag specifying which one is the default one.
                           items:
                             properties:
-                              isDefautClass:
+                              isDefaultClass:
                                 description: 'Optional: IsDefaultClass. If true, the created StorageClass in the tenant cluster will be annotated with: storageclass.kubernetes.io/is-default-class : true If missing or false, annotation will be: storageclass.kubernetes.io/is-default-class : false'
                                 type: boolean
                               name:
                                 type: string
                             required:
-                              - isDefautClass
                               - name
                             type: object
                           type: array
