--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -18,7 +18,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.1
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: tenants.csiprovisioner.kubevirt.io
 spec:
@@ -30,95 +30,95 @@ spec:
     singular: tenant
   scope: Cluster
   versions:
-    - name: v1alpha1
-      schema:
-        openAPIV3Schema:
-          description: Tenant is the Schema for the tenants API
-          properties:
-            apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation
+  - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: Tenant is the Schema for the tenants API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
               of an object. Servers should convert recognized schemas to the latest
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-              type: string
-            kind:
-              description: 'Kind is a string value representing the REST resource this
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
               object represents. Servers may infer this from the endpoint the client
               submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-              type: string
-            metadata:
-              type: object
-            spec:
-              description: TenantSpec defines the desired state of Tenant.
-              properties:
-                imageRepository:
-                  description: Image repository address
-                  type: string
-                imageTag:
-                  description: Image tag that should be used for all csi driver components
-                  type: string
-                storageClasses:
-                  description: StorageClasses represents storage classes that the tenant
-                    operator should create.
-                  items:
-                    description: StorageClass represents a storage class that should
-                      reference a KubeVirt storage class on infra cluster.
-                    properties:
-                      bus:
-                        description: The VM bus type, defaults to scsi.
-                        type: string
-                      infraStorageClassName:
-                        description: Name of the storage class to use on the infrastructure
-                          cluster.
-                        type: string
-                    required:
-                      - infraStorageClassName
-                    type: object
-                  type: array
-              type: object
-            status:
-              description: TenantStatus defines the observed state of Tenant.
-              properties:
-                resourceConditions:
-                  description: Conditions represents resource conditions that operator
-                    reconciles.
-                  items:
-                    description: ResourceStatusCondition contains details for the current
-                      condition.
-                    properties:
-                      lastTransitionTime:
-                        description: Last time the condition transitioned from one status
-                          to another.
-                        format: date-time
-                        type: string
-                      operationResult:
-                        description: OperationResult is the action result of a CreateOrUpdate
-                          call.
-                        type: string
-                      reason:
-                        description: Unique, one-word, CamelCase reason for the condition's
-                          last transition.
-                        type: string
-                      resource:
-                        description: Resource represents a k8s resource that has been
-                          created/updated by the operator.
-                        type: string
-                    required:
-                      - operationResult
-                      - resource
-                    type: object
-                  type: array
-              type: object
-          type: object
-      served: true
-      storage: true
-      subresources:
-        status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: TenantSpec defines the desired state of Tenant.
+            properties:
+              imageRepository:
+                description: Image repository address
+                type: string
+              imageTag:
+                description: Image tag that should be used for all csi driver components
+                type: string
+              storageClasses:
+                description: StorageClasses represents storage classes that the tenant
+                  operator should create.
+                items:
+                  description: StorageClass represents a storage class that should
+                    reference a KubeVirt storage class on infra cluster.
+                  properties:
+                    bus:
+                      description: The VM bus type, defaults to scsi.
+                      type: string
+                    infraStorageClassName:
+                      description: Name of the storage class to use on the infrastructure
+                        cluster.
+                      type: string
+                    isDefaultClass:
+                      description: 'Optional: IsDefaultClass if true, the created
+                        StorageClass will be annotated with: storageclass.kubernetes.io/is-default-class
+                        : true If missing or false, annotation will be: storageclass.kubernetes.io/is-default-class
+                        : false'
+                      type: boolean
+                  required:
+                  - infraStorageClassName
+                  type: object
+                type: array
+            type: object
+          status:
+            description: TenantStatus defines the observed state of Tenant.
+            properties:
+              resourceConditions:
+                description: Conditions represents resource conditions that operator
+                  reconciles.
+                items:
+                  description: ResourceStatusCondition contains details for the current
+                    condition.
+                  properties:
+                    lastTransitionTime:
+                      description: Last time the condition transitioned from one status
+                        to another.
+                      format: date-time
+                      type: string
+                    operationResult:
+                      description: OperationResult is the action result of a CreateOrUpdate
+                        call.
+                      type: string
+                    reason:
+                      description: Unique, one-word, CamelCase reason for the condition's
+                        last transition.
+                      type: string
+                    resource:
+                      description: Resource represents a k8s resource that has been
+                        created/updated by the operator.
+                      type: string
+                  required:
+                  - operationResult
+                  - resource
+                  type: object
+                type: array
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
 ---
 apiVersion: v1
 kind: Namespace
@@ -334,7 +334,7 @@ spec:
             - /manager
           args:
             - --leader-elect
-          image: quay.io/kubermatic/kubevirt-csi-driver-operator:v0.2.0
+          image: quay.io/kubermatic/kubevirt-csi-driver-operator:v0.3.0
           imagePullPolicy: Always
           name: manager
           securityContext:
@@ -368,7 +368,8 @@ metadata:
 spec:
   storageClasses:
 {{- range  .Cluster.KubeVirtInfraStorageClasses }}
-   - infraStorageClassName: {{ . }}
+   - infraStorageClassName: {{ .Name }}
+     isDefaultClass: {{ .IsDefaultClass }}
      bus: scsi
 {{- end }}
 {{end}}
