--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -401,10 +401,7 @@ spec:
                     systemApplications:
                       description: SystemApplications contains configuration for system Applications (such as CNI).
                       properties:
-                        helmRepository:
-                          description: HelmRepository specifies OCI repository containing Helm charts of system Applications.
-                          type: string
-                        registryConfigFile:
+                        helmRegistryConfigFile:
                           description: HelmRegistryConfigFile optionally holds the ref and key in the secret for the OCI registry credential file. The value is dockercfg file that follows the same format rules as ~/.docker/config.json The Secret must exist in the namespace where KKP is installed (default is "kubermatic"). The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:` set to "helm".
                           properties:
                             key:
@@ -420,6 +417,9 @@ spec:
                             - key
                           type: object
                           x-kubernetes-map-type: atomic
+                        helmRepository:
+                          description: HelmRepository specifies OCI repository containing Helm charts of system Applications.
+                          type: string
                       type: object
                   type: object
                 versions:
