OPA integration: allow to define enforcementAction in constraints.kubermatic.k8c.io/v1
Signed-off-by: Vincent Gramer <vincent@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_constraints.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_constraints.yaml
@@ -42,6 +42,9 @@ spec:
                 disabled:
                   description: Disabled  is the flag for disabling OPA constraints
                   type: boolean
+                enforcementAction:
+                  description: EnforcementAction defines the action to take in response to a constraint being violated. By default, EnforcementAction is set to deny as the default behavior is to deny admission requests with any violation.
+                  type: string
                 match:
                   description: Match contains the constraint to resource matching data
                   properties:
